# duckdb-nats-jetstream

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  demo-protobuf.html  demo.html  description.yml  docker-compose.yml  extension_config.cmake  requirements.txt  vcpkg.json
.github/: PR_DESCRIPTION.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: MainDistributionPipeline.yml
docs/: EXAMPLES.md  GUIDE.md  PUBLISHING.md
scripts/: generate-demo-screenshots.sh  generate-telemetry.py  setup-streams.sh
src/: nats_js_extension.cpp  nats_scan.cpp
src/include/: nats_js_extension.hpp  nats_scan.hpp
test/: TEST_COVERAGE_SUMMARY.md  run_all_tests.sh
test/proto/: check_stream.py  generate_protobuf_data.py  telemetry.proto  test_protobuf_api.cpp  types_test.proto  verify_protobuf_message.py
test/sql/: README.md  nats_scan.test  test_connection_errors.sql  test_json_extraction.sql  test_payload_blob.sql  test_protobuf.sql  test_protobuf_errors.sql  test_sequence_ranges.sql  test_subject_filtering.sql  test_timestamp_queries.sql
